# cmscribe

./: README.md  __init__.py  pyproject.toml  requirements.txt
cmscribe/: __init__.py  main.py
cmscribe/core/: __init__.py  cache.py  config.py  types.py
cmscribe/providers/: __init__.py  ollama.py
cmscribe/utils/: __init__.py  cmd_.py  git_.py
