[project]
name = "cmscribe"
version = "0.1.0"
description = "AI-powered commit message generator"
authors = [
    { name = "Ernest Asare", email = "ernestasare2411@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "requests>=2.31.0",
    "gitpython>=3.1.41",
    "transformers>=4.37.2",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.2",
    "numpy>=1.26.3",
]

[project.scripts]
cmscribe = "cmscribe.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
lint = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --cov=cmscribe"

[project.urls]
Homepage = "https://github.com/quantum-ernest/cmscribe"
Issues = "https://github.com/quantum-ernest/cmscribe/issues"
